--- a/M4/SpaceWars/about.html
+++ b/M4/SpaceWars/about.html
@@ -36,7 +36,7 @@
                     <div class="member-info">
                         <h2>Mario</h2>
                         <p>Age: 18</p>
-                        <p>Java programming developer, also in web and we make databases.</p>
+                        <p>Web designer.</p>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     <div class="member-info">
                         <h2>Arnau</h2>
                         <p>Age: 19</p>
-                        <p>Java programming developer, also in web and we make databases.</p>
+                        <p>Java developer, database creator and diagram developer.</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     <div class="member-info">
                         <h2>Jose</h2>
                         <p>Age: 19</p>
-                        <p>Java programming developer, also in web and we make databases.</p>
+                        <p>Java developer.</p>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     <div class="member-info">
                         <h2>Mohammad</h2>
                         <p>Age: 26</p>
-                        <p>Java programming developer, also in web and we make databases.</p>
+                        <p>Web designer.</p>
                     </div>
                 </div>
             </div>
