--- a/M4/SpaceWars/principal.html
+++ b/M4/SpaceWars/principal.html
@@ -33,7 +33,7 @@
                 <p>Planet Wars is a Star Wars style ship war game, what it is about is that you have your planet, with your own troops (ships) and your currency, with that you must attack other planets and thus be able to obtain materials from the enemy to conquer Your planet. Each planet has its defense troops and its attack troops. In order to create troops, each one has its price and by conquering other planets you will get more materials. !!!FIGHT TO WIN!!!</p>
             </div>
             <div class="column derecha">
-                <img src="imgs/logo.jpg" alt="Imagen" class="imagen-columna">
+                <img src="imgs/batalla3.png" alt="Imagen" class="imagen-columna">
             </div>
         </section>
         <section id="github-button">
