--- a/M4/index.html
+++ b/M4/index.html
@@ -11,7 +11,7 @@
 
         <div class="search-container">
             <div class="logo">
-                <img src="2-removebg-preview.png" alt="Design Lobby Logo">
+                <img src="img/logo.png" alt="Design Lobby Logo">
                 <span>planet wars</span>
             </div>
             <form>
@@ -19,9 +19,9 @@
                 <button type="submit" class="search-button">Buscar</button>
             </form>
             <div class="social-icons">
-                <a href="https://www.facebook.com" target="_blank" class="social-icon"><img src="facebook-logo.webp" alt="Facebook" class="icon-img"></a>
-                <a href="https://www.twitter.com" target="_blank" class="social-icon"><img src="x-logo.png" alt="Twitter" class="icon-img"></a>
-                <a href="https://www.instagram.com" target="_blank" class="social-icon"><img src="insta-logo1-removebg-preview.png" alt="Instagram" class="icon-img"></a>
+                <a href="https://www.facebook.com" target="_blank" class="social-icon"><img src="img/facebook-logo.webp" alt="Facebook" class="icon-img"></a>
+                <a href="https://www.twitter.com" target="_blank" class="social-icon"><img src="img/x-logo.png" alt="Twitter" class="icon-img"></a>
+                <a href="https://www.instagram.com" target="_blank" class="social-icon"><img src="img/insta-logo1-removebg-preview.png" alt="Instagram" class="icon-img"></a>
             </div>
 
             <div class="log">
@@ -34,16 +34,12 @@
         </div>
 
         <div class="navbar">
-            
-            <div class="nav">
-                <ul class="nav-links">
-                    <li><a href="index.html">Prancipal</a></li>
-                    <li><a href="Tutorial.html">Tutorial</a></li>
-                    <li><a href="about_us.html">About us</a></li>
-                    <li><a href="contact">Contact Us</a></li>
-                </ul>
-            </div>
-            
+            <ul class="nav-links">
+                <li><a href="index.html">Principal</a></li>
+                <li><a href="Tutorial.html">Tutorial</a></li>
+                <li><a href="about_us.html">About us</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+            </ul>
         </div>
         <div class="header-content">
             <h1>Planet wars proyecto</h1>
