--- a/M4/Tutorial.html
+++ b/M4/Tutorial.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design Lobby</title>
+    <title>planet wars tutorial</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="tutorial.css">
+    <link rel="stylesheet" href="Tutorial.css">
 </head>
 <body>
-    <header class="main-header">
+    <header id="sub" class="main-header">
 
         <div class="search-container">
             <div class="logo">
@@ -39,13 +39,14 @@
                 <li><a href="index.html">Principal</a></li>
                 <li><a href="Tutorial.html">Tutorial</a></li>
                 <li><a href="about_us.html">About us</a></li>
+                <li><a href="Productos.html">Shopp</a></li>
                 <li><a href="contact_us.html">Contact Us</a></li>
-            </ul>  
-        </div>
+            </ul>
+    </div>
         <div class="header-content">
             <h1>Planet wars proyecto</h1>
             <p>Desde un estudio creativo que ama diseñar mundos épicos y aventuras inolvidables para jugadores de todo el universo</p>
-            <a href="#start-project" class="start-project-btn">Start</a>
+            <a href="https://github.com/KaitoKidd28/Proyect_Arnau_Jose_Mario_Moha" class="start-project-btn">github</a>
         </div>
     </header>
     
@@ -115,6 +116,11 @@
                 </div>
             </div>
         </section>
+        <div class="subi">
+            <a href="#sub">
+                <img src="img/subi.png" alt="">
+            </a>
+        </div>
     </main>
 
     <footer>
@@ -126,17 +132,17 @@
             <div class="footer-column">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Tutorial.html">tutorial</a></li>
                     <li><a href="#">Productos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="contact_us.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Contacto</h3>
-                <p>Dirección: Calle Principal, Ciudad</p>
-                <p>Teléfono: +123 456 789</p>
-                <p>Email: info@tudominio.com</p>
+                <p>Dirección: Calle Principal, cornilla</p>
+                <p>Teléfono: +34 456 789 960</p>
+                <p>Email: info@planetwars.com</p>
             </div>
         </div>
     </footer>
